introduced the TranslationResolver; added tests; added support for EcoEnchants